--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link href='%PUBLIC_URL%/css/custom.css' rel="stylesheet">
-    <link href='%PUBLIC_URL%/css/boostrap.css' rel="stylesheet">
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>E-Ticaret</title>
-  </head>
-  <body style="width: 100%; height:100%;">
-    
-    <div style="width: 100%; height:100%;" id="root">
-     
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link href='%PUBLIC_URL%/css/custom.css' rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>E-Ticaret</title>
+</head>
+
+<body style="width: 100%; height:100%;">
+
+  <div style="width: 100%; height:100%;" id="root">
+
   </div>
- <script src="%PUBLIC_URL%/boostrap.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
